Adding put and delete routes for regions
