# middleware/validate.js
@@ -23,6 +23,24 @@ const saveContact = (req, res, next) => {
   });
 };
 
+const saveRegion = (req, res, next) => {
+  const validationRule = {
+    regionName: 'required|string',
+    description: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
-  saveContact
+  saveContact, saveRegion
 };
